<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园网登录客户端</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_label_username">账户</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登录</string>
    <string name="login_label_signout">注销</string>
    <string name="sign_label_rembpass">记住密码</string>

</resources>
